[gd_scene load_steps=8 format=3 uid="uid://c1rjb7rkohryr"]

[ext_resource type="Script" path="res://Scripts/SonicMovement.gd" id="1_g17tg"]
[ext_resource type="Texture2D" uid="uid://bqrgs4m1vy0wo" path="res://Sprites/sonic.png" id="2_f0lb3"]
[ext_resource type="AudioStream" uid="uid://dos0d3r7rqcun" path="res://Sounds/movement-sfx.mp3" id="3_d6wna"]
[ext_resource type="AudioStream" uid="uid://ba3ic6w40b76l" path="res://Sounds/woohoo.mp3" id="4_k5vig"]
[ext_resource type="AudioStream" uid="uid://duj2qnyx28hhu" path="res://Sounds/scream.mp3" id="5_grw5h"]

[sub_resource type="SpriteFrames" id="SpriteFrames_8jusa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_f0lb3")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_83e5f"]
radius = 26.0
height = 78.0

[node name="SonicPlayer" type="Node2D" groups=["Player"]]

[node name="Sonic" type="CharacterBody2D" parent="."]
floor_stop_on_slope = false
floor_max_angle = 1.39626
safe_margin = 0.26
script = ExtResource("1_g17tg")

[node name="SonicSprite" type="AnimatedSprite2D" parent="Sonic"]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_8jusa")

[node name="Camera2D" type="Camera2D" parent="Sonic"]
position = Vector2(15, 22)
zoom = Vector2(2, 2)
limit_left = 0
limit_top = -860
limit_right = 12000
limit_bottom = 748
position_smoothing_enabled = true
drag_vertical_enabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sonic"]
position = Vector2(4, 7)
shape = SubResource("CapsuleShape2D_83e5f")

[node name="MovementSound" type="AudioStreamPlayer" parent="Sonic"]
stream = ExtResource("3_d6wna")

[node name="JumpSound" type="AudioStreamPlayer" parent="Sonic"]
stream = ExtResource("4_k5vig")

[node name="DeathSound" type="AudioStreamPlayer" parent="Sonic"]
stream = ExtResource("5_grw5h")
